[edit] fixing header alignment

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -269,7 +269,7 @@
       }
       .linkedin {
         div {
-          text-align: left;
+          text-align: right;
           color: #fff;
           cursor: pointer;
         }
